--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -165,7 +165,7 @@
     <h4 id="curriculum-vitae">Curriculum Vitae</h4>
 <p>The <a href="http://lattes.cnpq.br/" target="_blank" rel="noopener noreferrer">Lattes</a> Database is a Curriculum and institutions database of Science and Technology areas in Brazil.<br>
 You can see my Lattes CV in <a href="http://lattes.cnpq.br/5846052449613692" target="_blank" rel="noopener noreferrer">Portuguese</a> or in <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&amp;id=K4769337Z5&amp;idiomaExibicao=2" target="_blank" rel="noopener noreferrer">English</a>.<br>
-<a href="https://orcid.org" target="_blank" rel="noopener noreferrer">ORCiD</a> provides you with an unique digital identifier and also connects with all major publishers and funding agencies. Hopefully this will became the de-facto online CV for all researchers in the world.<br>
+<a href="https://orcid.org" target="_blank" rel="noopener noreferrer">ORCiD</a> provides you with an unique digital identifier and also connects with all major publishers and funding agencies.<br>
 My ORCiD is <a href="http://orcid.org/0000-0001-5073-5572" target="_blank" rel="noopener noreferrer">0000-0001-5073-5572</a>
  <br>
  </p>
@@ -177,9 +177,6 @@ My ORCiD is <a href="http://orcid.org/0000-0001-5073-5572" target="_blank" rel="
     <p>Head of the CNPq Research Group on <a href="http://dgp.cnpq.br/dgp/espelhogrupo/3669868695434986" target="_blank" rel="noopener noreferrer">Geomorphometry, Remote Sensing and Spatial Analysis</a> (description in Portuguese only).</p>
   </li>
   <li>
-    <p>Head of Department - <a href="http://iee.usp.br/?q=pt-br/divisao-cientifica/tecnologia-petroleo" target="_blank" rel="noopener noreferrer">Division of Oil, Natural Gas and Bioenergy</a> - IEE-USP (2016-??)</p>
-  </li>
-  <li>
     <p>Editor-in-Chief of the <a href="http://www.scielo.br/bjgeo" target="_blank" rel="noopener noreferrer">Brazilian Journal of Geology</a> (2021-??)</p>
   </li>
   <li>
@@ -187,6 +184,9 @@ My ORCiD is <a href="http://orcid.org/0000-0001-5073-5572" target="_blank" rel="
   </li>
   <li>
     <p>Deputy Editor of the <a href="http://www.scielo.br/bjgeo" target="_blank" rel="noopener noreferrer">Brazilian Journal of Geology</a> (2017-2021)</p>
+  </li>
+  <li>
+    <p>Head of Department - <a href="http://iee.usp.br/?q=pt-br/divisao-cientifica/tecnologia-petroleo" target="_blank" rel="noopener noreferrer">Division of Oil, Natural Gas and Bioenergy</a> - IEE-USP (2016-2024)</p>
   </li>
   <li>
     <p>Head of the Research Committee - IEE-USP (2015-2019)</p>
@@ -206,38 +206,38 @@ My ORCiD is <a href="http://orcid.org/0000-0001-5073-5572" target="_blank" rel="
 
 <h4 id="quick-bio">Quick bio</h4>
 <ul>
+  <li>2024-?? - Full Professor<br>
+Institute of Astronomy, Geophysics and Atmospheric Sciences (<a href="http://www.iag.usp.br" target="_blank" rel="noopener noreferrer">IAG-USP</a>) - Brazil.</li>
   <li>
-    <p>2015-?? - Associate Professor of Geotechnologies<br>
+    <p>2015-24 - Associate Professor - Geotechnologies<br>
 Institute of Energy and Environment (<a href="http://www.iee.usp.br" target="_blank" rel="noopener noreferrer">IEE-USP</a>) - Brazil.</p>
   </li>
   <li>
     <p>2015 - Habilitation Thesis (Livre Docência)<br>
-Institute of Geosciences - University of São Paulo (<a href="http://www.igc.usp.br" target="_blank" rel="noopener noreferrer">IGc-USP</a>) - Brazil.</p>
+Institute of Geosciences - Universidade de São Paulo (<a href="http://www.igc.usp.br" target="_blank" rel="noopener noreferrer">IGc-USP</a>) - Brazil.</p>
   </li>
   <li>
-    <p>2014-2015 - Assistant Professor of Geotechnologies<br>
+    <p>2014-2015 - Assistant Professor - Geotechnologies<br>
 Institute of Energy and Environment (<a href="http://www.iee.usp.br" target="_blank" rel="noopener noreferrer">IEE-USP</a>) - Brazil.</p>
   </li>
   <li>
-    <p>2009-2014 - Assistant Professor of Geotechnologies<br>
-Institute of Geosciences - University of São Paulo (<a href="http://www.igc.usp.br" target="_blank" rel="noopener noreferrer">IGc-USP</a>) - Brazil.</p>
+    <p>2009-2014 - Assistant Professor - Geotechnologies<br>
+Institute of Geosciences - Universidade de São Paulo (<a href="http://www.igc.usp.br" target="_blank" rel="noopener noreferrer">IGc-USP</a>) - Brazil.</p>
   </li>
   <li>
     <p>2004-2008 - Doctor of Sciences Degree (PhD equivalent - Geotectonics) IGc-USP - Brazil.<br>
-Thesis available at the <a href="http://www.teses.usp.br/teses/disponiveis/44/44141/tde-03022009-141229/pt-br.php" target="_blank" rel="noopener noreferrer">University of São Paulo Digital Library</a>.</p>
+Thesis available at the <a href="http://www.teses.usp.br/teses/disponiveis/44/44141/tde-03022009-141229/pt-br.php" target="_blank" rel="noopener noreferrer">Universidade de São Paulo Digital Library</a>.</p>
   </li>
   <li>
     <p>2002-2004 - Master of Sciences Degree (MSc equivalent - Geotectonics) IGc-USP - Brazil.<br>
-Thesis available at the <a href="http://www.teses.usp.br/teses/disponiveis/44/44134/tde-10082006-155540/pt-br.php" target="_blank" rel="noopener noreferrer">University of São Paulo Digital Library</a>.</p>
+Thesis available at the <a href="http://www.teses.usp.br/teses/disponiveis/44/44134/tde-10082006-155540/pt-br.php" target="_blank" rel="noopener noreferrer">Universidade de São Paulo Digital Library</a>.</p>
   </li>
   <li>
     <p>1996-2001 - Geology Degree (BSc Hons. equivalent) IGc-USP - Brazil.</p>
   </li>
-  <li>
-    <p>1977 - Origin of species<br>
+  <li>1977 - Origin of species<br>
  <br>
- </p>
-  </li>
+ </li>
 </ul>
 
 <h4 id="social">Social</h4>
