--- a/bjgeo/index.html
+++ b/bjgeo/index.html
@@ -247,7 +247,7 @@
 
 <p>BUT…</p>
 
-<p>If at least <em>half</em> of the authors are SBG members, with their annual fees payed, then the APC is waived (in other words, a 100% discount).</p>
+<p>If at least <em>half</em> of the authors are SBG members, with their annual fees paid, then the APC is waived (in other words, a 100% discount).</p>
 
 <!-- No. We don't charge anything for publishing your paper. There are no Article Processing Charges (APCs) or costs for color figures. The journal in online-only so we don't have costs for printing.
 
