--- a/index.html
+++ b/index.html
@@ -166,28 +166,44 @@
 
 <p>Hello there. Thanks for stopping by. Here you can find a bit more on what I do, my research, software I develop and a bunch of other stuff.</p>
 
-<p>I’m an Associate Professor of Geotechnologies at the <a href="http://www.iee.usp.br" target="_blank" rel="noopener noreferrer">Institute of Energy and Environment</a> of the <a href="https://www.usp.br" target="_blank" rel="noopener noreferrer">University of São Paulo</a>, Brazil, where I run the Spatial Analysis and Modelling Lab (<a href="https://spamlab.github.io/" target="_blank" rel="noopener noreferrer">SPAMLab</a>).</p>
+<p>I’m a Full Professor at the <a href="http://www.iag.usp.br" target="_blank" rel="noopener noreferrer">Institute of Astronomy, Geophysics and Atmospheric Sciences</a> (IAG) of the <a href="https://www.usp.br" target="_blank" rel="noopener noreferrer">Universidade de São Paulo</a> (USP), Brazil, where I run the Spatial Analysis and Modelling Lab (<a href="https://spamlab.github.io/" target="_blank" rel="noopener noreferrer">SPAMLab</a>).</p>
 
 <p>My research interests include Digital Terrain Analysis (Geomorphometry), DEMs, GIS, UAVs, LiDAR, Landslides, Remote Sensing, Free Software (FOSS), Morphotectonics/Neotectonics, and Karstic Systems.</p>
 
 <p> 
  </p>
 <h3 id="address">Address</h3>
-<p><a href="http://www.usp.br/iee/?q=divisao/petroleo" target="_blank" rel="noopener noreferrer">Division of Oil, Natural Gas and Bioenergy</a><br>
-<a href="http://www.iee.usp.br/" target="_blank" rel="noopener noreferrer">Institute of Energy and Environment</a><br>
-<a href="http://www.usp.br/" target="_blank" rel="noopener noreferrer">University of São Paulo</a> – <a href="https://en.wikipedia.org/wiki/Brazil" target="_blank" rel="noopener noreferrer">Brazil</a></p>
+<p><a href="https://www.iag.usp.br/geofisica" target="_blank" rel="noopener noreferrer">Department of Geophysics</a><br>
+<a href="http://www.iag.usp.br/" target="_blank" rel="noopener noreferrer">Institute of Astronomy, Geophysics and Atmospheric Sciences</a><br>
+<a href="http://www.usp.br/" target="_blank" rel="noopener noreferrer">Universidade de São Paulo</a> – <a href="https://en.wikipedia.org/wiki/Brazil" target="_blank" rel="noopener noreferrer">Brazil</a></p>
 
-<p>Av. Professor Luciano Gualberto, 1289, Cidade Universitária<br>
-05508-010 - São Paulo – SP – Brasil<br>
-Phone: +55 11 3091 2627<br>
-Fax: +55 11 3815 8813<br>
+<p>Rua do Matão, 1226, Cidade Universitária<br>
+05508-090 - São Paulo – SP – Brasil<br>
+Phone: +55 11 3091 2762<br>
 e-mail: <img src="/img/mail.png" alt=""></p>
 
-<p>LatLong: -23.558799,-46.735672<br>
-23°33’31.68”S, 46°44’8.42”W<br>
-UTM 23K 322847 E / 7393546 N<br>
-<a href="https://www.google.com/maps/@-23.558799,-46.735672,216m/data=!3m1!1e3?hl=en" target="_blank" rel="noopener noreferrer">GoogleMaps</a><br>
-<a href="https://w3w.co/written.tech.reward" target="_blank" rel="noopener noreferrer">///written.tech.reward</a></p>
+<p>LatLong: -23.559640, -46.733876<br>
+23°33’34.70”S, 46°44’1.95””W<br>
+UTM 23K 323032 E / 7393455 N<br>
+<a href="https://maps.app.goo.gl/5zcKuW7c6tbdhoBi6" target="_blank" rel="noopener noreferrer">GoogleMaps</a></p>
+
+<!-- ### Address
+[Division of Oil, Natural Gas and Bioenergy](http://www.usp.br/iee/?q=divisao/petroleo)  
+[Institute of Energy and Environment](http://www.iee.usp.br/)  
+[University of São Paulo](http://www.usp.br/) – [Brazil](https://en.wikipedia.org/wiki/Brazil)    
+
+Av. Professor Luciano Gualberto, 1289, Cidade Universitária  
+05508-010 - São Paulo – SP – Brasil  
+Phone: +55 11 3091 2627  
+Fax: +55 11 3815 8813  
+e-mail: ![](/img/mail.png)
+
+LatLong: -23.558799,-46.735672  
+23°33’31.68”S, 46°44’8.42”W  
+UTM 23K 322847 E / 7393546 N  
+[GoogleMaps](https://www.google.com/maps/@-23.558799,-46.735672,216m/data=!3m1!1e3?hl=en)  
+[///written.tech.reward](https://w3w.co/written.tech.reward)  
+ -->
 
 </div>
                 </div>
