--- a/publications/index.html
+++ b/publications/index.html
@@ -381,6 +381,113 @@
 </li>
 <li>
 <div class="block has-text-justified">
+<span id="Ferreira2024">Ferreira, A. T. S., Grohmann, C. H., Ribeiro, M. C. H., Santos, M. S. T., de Oliveira, R. C., &amp; Siegle, E. 2024. Beach surface model construction: A strategy approach with structure from motion-multi-view stereo. <i>MethodsX</i>, 12: 102694.</span>
+
+<div class="buttons">
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View abstract" button="" class="button is-small is-info is-light modal-button" data-target="Ferreira2024" aria-haspopup="true">Abstract</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">Abstract</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    In contrast to traditional beach profiling methods like topographic surveys and GNSS, which pose significant challenges in terms of cost and time, this research underscores the efficiency, cost-effectiveness, and simplicity of terrestrial photogrammetry employing the Structure from Motion-Multi View Stereo (SfM-MVS) method. Notably, this approach enables the utilization of commonplace devices such as smartphones for data capture. The methodology integrates a 12-megapixel camera for image acquisition, processed through Agisoft Metashape Professional software, and validated for accuracy using ground control points (GCPs) and checkpoints (CKPs) calibrated via GNSS. Findings reveal substantial disparities in positional accuracy according to the Ground Control Points distribution. The study underscores the critical role of strategically distributing GCPs and CKPs in effectively mapping coastal areas, thus affirming the potential of SfM-MVS as a powerful and accessible tool for coastal monitoring initiatives. This research contributes significantly to advancing the efficiency and accessibility of beach profile monitoring, offering invaluable insights for researchers and practitioners in coastal management and environmental conservation efforts.
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View BibTeX" button="" class="button is-small is-info is-light modal-button" aria-haspopup="true">BibTeX</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">BibTeX</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    <pre>
+                    @article{Ferreira2024,
+  title = {{Beach surface model construction: A strategy approach with structure from motion-multi-view stereo}},
+  volume = {12},
+  issn = {2215-0161},
+  url = {http://dx.doi.org/10.1016/j.mex.2024.102694},
+  doi = {10.1016/j.mex.2024.102694},
+  journal = {MethodsX},
+  publisher = {Elsevier BV},
+  author = {Ferreira, A. T. S. and Grohmann, C. H. and Ribeiro, Maria Carolina Hernandez and Santos, Marcelo Soares Teles and de Oliveira, Regina Célia and Siegle, Eduardo},
+  year = {2024},
+  month = jun,
+  pages = {102694},
+  access = {Open Access},
+  oalink = {https://doi.org/10.1016/j.mex.2024.102694},
+  owner = {guano},
+  kind = {journal}
+}
+
+                    </pre>
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<a title="Open article (new tab)" class="button is-small is-success is-light" rel="noopener noreferrer noopener noreferrer" target="_blank" href="https://doi.org/10.1016/j.mex.2024.102694">Open Access</a>
+
+
+
+
+
+
+</div>
+
+</div>
+
+<p></p>
+
+<!--  <a class="button is-small is-info" data-toggle="collapse" href="#Ferreira2024-abstract">Abstract</a>
+<pre style="white-space:pre-wrap;" id="Ferreira2024-abstract" class="pre pre-scrollable collapse">In contrast to traditional beach profiling methods like topographic surveys and GNSS, which pose significant challenges in terms of cost and time, this research underscores the efficiency, cost-effectiveness, and simplicity of terrestrial photogrammetry employing the Structure from Motion-Multi View Stereo (SfM-MVS) method. Notably, this approach enables the utilization of commonplace devices such as smartphones for data capture. The methodology integrates a 12-megapixel camera for image acquisition, processed through Agisoft Metashape Professional software, and validated for accuracy using ground control points (GCPs) and checkpoints (CKPs) calibrated via GNSS. Findings reveal substantial disparities in positional accuracy according to the Ground Control Points distribution. The study underscores the critical role of strategically distributing GCPs and CKPs in effectively mapping coastal areas, thus affirming the potential of SfM-MVS as a powerful and accessible tool for coastal monitoring initiatives. This research contributes significantly to advancing the efficiency and accessibility of beach profile monitoring, offering invaluable insights for researchers and practitioners in coastal management and environmental conservation efforts.</pre>
+
+<a class="button is-small is-info" data-toggle="collapse" href="#Ferreira2024-bibtex">BibTeX</a>
+<pre id="Ferreira2024-bibtex" class="pre pre-scrollable collapse">@article{Ferreira2024,
+  title = {{Beach surface model construction: A strategy approach with structure from motion-multi-view stereo}},
+  volume = {12},
+  issn = {2215-0161},
+  url = {http://dx.doi.org/10.1016/j.mex.2024.102694},
+  doi = {10.1016/j.mex.2024.102694},
+  journal = {MethodsX},
+  publisher = {Elsevier BV},
+  author = {Ferreira, A. T. S. and Grohmann, C. H. and Ribeiro, Maria Carolina Hernandez and Santos, Marcelo Soares Teles and de Oliveira, Regina Célia and Siegle, Eduardo},
+  year = {2024},
+  month = jun,
+  pages = {102694},
+  access = {Open Access},
+  oalink = {https://doi.org/10.1016/j.mex.2024.102694},
+  owner = {guano},
+  kind = {journal}
+}
+</pre> -->
+
+
+
+
+
+
+
+
+
+</li>
+<li>
+<div class="block has-text-justified">
 <span id="Pinaya2024">Pinaya, J. L. D., Pitman, N. C. A., Cruz, F. W., Akabane, T. K., Lopez, M. del C. S., Pereira-Filho, A. J., Grohmann, C. H., Reis, L. S., Rodrigues, E. S. F., Ceccantini, G. C. T., &amp; De Oliveira, P. E. 2024. Humid and cold forest connections in South America between the eastern Andes and the southern Atlantic coast during the LGM. <i>Scientific Reports</i>, 14(1).</span>
 
 <div class="buttons">
@@ -469,6 +576,107 @@
   oalink = {http://dx.doi.org/10.1038/s41598-024-51763-8},
   publisher = {Springer Science and Business Media LLC},
   url = {http://dx.doi.org/10.1038/s41598-024-51763-8},
+  kind = {journal}
+}
+</pre> -->
+
+
+
+
+
+
+
+
+
+</li>
+<li>
+<div class="block has-text-justified">
+<span id="Scussel2024">Scussel, C., de Lima, S. C., Mendes, A. L. M., Santander, M. B., Ferreira, A. T. S., Zocche, J. J., Grohmann, C. H., &amp; Quintanilha, J. A. 2024. Dinâmica espaço-temporal na cobertura e uso da terra em uma bacia hidrográfica no sul do Brasil: análise baseada em sensoriamento remoto e big data. <i>Revista de Geociências do Nordeste</i>, 10: 124–137.</span>
+
+<div class="buttons">
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View abstract" button="" class="button is-small is-info is-light modal-button" data-target="Scussel2024" aria-haspopup="true">Abstract</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">Abstract</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    A exploração dos recursos naturais é alvo de preocupação, visto que o crescimento econômico interfere no equilíbrio ambiental. Este estudo analisou as mudanças espaço-temporais na cobertura e uso da terra (CUT) na Bacia Hidrográfica do Rio Araranguá (BHRA), sul de Santa Catarina, Brasil, no período de 2016-2023. Foram utilizadas imagens do satélite Sentinel 2A, selecionadas as bandas RGB, NIR e SWIR 1 e, aplicados os índices EVI2, MNDWI e NDBI, o que resultou na seleção de oito classes de CUT. As imagens orbitais foram classificadas por meio de rotinas de programação no Google Earth Engine (GEE) e a validação foi realizada a partir da obtenção de dados gerados pela plataforma. Os resultados evidenciaram acurácia geral de 93% para os dois anos. A classe Floresta Nativa foi a mais representativa e aumentou cerca de 1,62% nos últimos sete anos. Área Construída foi a classe que mais cresceu, e a classe Pastagem/Vegetação Herbácea teve redução de 5,6%. Os resultados revelaram mudanças tênues na paisagem, mantendo áreas com florestas nativas e incremento da expansão urbana. Esses dados podem auxiliar as políticas públicas e as tomadas de decisão no gerenciamento do território da bacia com viés para a conservação e preservação dos recursos naturais.
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View BibTeX" button="" class="button is-small is-info is-light modal-button" aria-haspopup="true">BibTeX</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">BibTeX</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    <pre>
+                    @article{Scussel2024,
+  title = {{Dinâmica espaço-temporal na cobertura e uso da terra em uma bacia hidrográfica no sul do Brasil: análise baseada em sensoriamento remoto e big data}},
+  volume = {10},
+  url = {https://periodicos.ufrn.br/revistadoregne/article/view/34886},
+  doi = {10.21680/2447-3359.2024v10n1ID34886},
+  journal = {Revista de Geociências do Nordeste},
+  author = {Scussel, C. and {de Lima}, S.C. and Mendes, A. L. M. and Santander, M. B. and Ferreira, A. T. S. and Zocche, J. J. and Grohmann, C. H. and Quintanilha, J. A.},
+  year = {2024},
+  pages = {124–137},
+  access = {Open Access},
+  oalink = {https://periodicos.ufrn.br/revistadoregne/article/view/34886},
+  owner = {guano},
+  kind = {journal}
+}
+
+                    </pre>
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<a title="Open article (new tab)" class="button is-small is-success is-light" rel="noopener noreferrer noopener noreferrer" target="_blank" href="https://periodicos.ufrn.br/revistadoregne/article/view/34886">Open Access</a>
+
+
+
+
+
+
+</div>
+
+</div>
+
+<p></p>
+
+<!--  <a class="button is-small is-info" data-toggle="collapse" href="#Scussel2024-abstract">Abstract</a>
+<pre style="white-space:pre-wrap;" id="Scussel2024-abstract" class="pre pre-scrollable collapse">A exploração dos recursos naturais é alvo de preocupação, visto que o crescimento econômico interfere no equilíbrio ambiental. Este estudo analisou as mudanças espaço-temporais na cobertura e uso da terra (CUT) na Bacia Hidrográfica do Rio Araranguá (BHRA), sul de Santa Catarina, Brasil, no período de 2016-2023. Foram utilizadas imagens do satélite Sentinel 2A, selecionadas as bandas RGB, NIR e SWIR 1 e, aplicados os índices EVI2, MNDWI e NDBI, o que resultou na seleção de oito classes de CUT. As imagens orbitais foram classificadas por meio de rotinas de programação no Google Earth Engine (GEE) e a validação foi realizada a partir da obtenção de dados gerados pela plataforma. Os resultados evidenciaram acurácia geral de 93% para os dois anos. A classe Floresta Nativa foi a mais representativa e aumentou cerca de 1,62% nos últimos sete anos. Área Construída foi a classe que mais cresceu, e a classe Pastagem/Vegetação Herbácea teve redução de 5,6%. Os resultados revelaram mudanças tênues na paisagem, mantendo áreas com florestas nativas e incremento da expansão urbana. Esses dados podem auxiliar as políticas públicas e as tomadas de decisão no gerenciamento do território da bacia com viés para a conservação e preservação dos recursos naturais.</pre>
+
+<a class="button is-small is-info" data-toggle="collapse" href="#Scussel2024-bibtex">BibTeX</a>
+<pre id="Scussel2024-bibtex" class="pre pre-scrollable collapse">@article{Scussel2024,
+  title = {{Dinâmica espaço-temporal na cobertura e uso da terra em uma bacia hidrográfica no sul do Brasil: análise baseada em sensoriamento remoto e big data}},
+  volume = {10},
+  url = {https://periodicos.ufrn.br/revistadoregne/article/view/34886},
+  doi = {10.21680/2447-3359.2024v10n1ID34886},
+  journal = {Revista de Geociências do Nordeste},
+  author = {Scussel, C. and {de Lima}, S.C. and Mendes, A. L. M. and Santander, M. B. and Ferreira, A. T. S. and Zocche, J. J. and Grohmann, C. H. and Quintanilha, J. A.},
+  year = {2024},
+  pages = {124–137},
+  access = {Open Access},
+  oalink = {https://periodicos.ufrn.br/revistadoregne/article/view/34886},
+  owner = {guano},
   kind = {journal}
 }
 </pre> -->
@@ -574,6 +782,115 @@
   oalink = {https://doi.org/10.1016/j.biocon.2024.110499},
   owner = {guano},
   url = {https://doi.org/10.1016/j.biocon.2024.110499},
+  kind = {journal}
+}
+</pre> -->
+
+
+
+
+
+
+
+
+
+</li>
+<li>
+<div class="block has-text-justified">
+<span id="RibeiroRios2024">Ribeiro Rios, I. H., Weyll SantAnna, M., Quintanilha, J. A., &amp; Grohmann, C. H. 2024. Avaliação da precisão da classificação de cobertura do solo na identificação de áreas potenciais para o aparecimento de criadouros de Aedes aegypt. <i>Revista Brasileira de Geografia</i>, 68(2): 23–44.</span>
+
+<div class="buttons">
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View abstract" button="" class="button is-small is-info is-light modal-button" data-target="RibeiroRios2024" aria-haspopup="true">Abstract</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">Abstract</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    Uma ferramenta bastante utilizada atualmente é a classificação de cobertura do solo, em vários campos da ciência. Com o avanço das técnicas de sensoriamento remoto, pode-se utilizar resoluções melhores de imagens, e com isso a acurácia da classificação melhora. Este trabalho utiliza imagens do satélite World-View 3 para a classificação supervisionada de dois bairros da cidade de Campinas, São Paulo. As classes foram divididas em Árvore, Grama, Asfalto, Sombra, Cimento, Piscina/Água, Solo exposto e Telhados 1, 2 e 3. Foram averiguadas a matriz de erro, o coeficiente Kappa e a acurácia sob três diferentes algoritmos: Mínima Distância, Máxima Verossimilhança e Random Forest. De forma geral, o algoritmo de destaque foi o de Máxima Verossimilhança, tendo acurácias gerais maiores que 90%.
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<div x-data="{ open: false }">
+    <a x-on:click="open = true" title="View BibTeX" button="" class="button is-small is-info is-light modal-button" aria-haspopup="true">BibTeX</a>
+      <div class="modal" x-bind:class="open ? 'is-active' : ''" x-cloak="">
+        <div class="modal-background" x-on:click="open = false"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">BibTeX</p>
+            </header>
+              <section class="modal-card-body">
+                  <div class="content">
+                    <pre>
+                    @article{RibeiroRios2024,
+  title = {{Avalia\c{c}ão da precisão da classifica\c{c}ão de cobertura do solo na identifica\c{c}ão de áreas potenciais para o aparecimento de criadouros de Aedes aegypt}},
+  volume = {68},
+  issn = {0034-723X},
+  url = {http://dx.doi.org/10.21579/issn.2526-0375_2023_n2_23-44},
+  doi = {10.21579/issn.2526-0375_2023_n2_23-44},
+  number = {2},
+  journal = {Revista Brasileira de Geografia},
+  publisher = {Tikinet Edicao Ltda. - EPP},
+  author = {{Ribeiro Rios}, Israel Henrique and Weyll SantAnna, Maryly and Quintanilha, Jose Alberto and Grohmann, C. H.},
+  year = {2024},
+  month = apr,
+  pages = {23–44},
+  access = {Open Access},
+  oalink = {https://doi.org/10.21579/issn.2526-0375_2023_n2_23-44},
+  owner = {guano},
+  kind = {journal}
+}
+
+                    </pre>
+                  </div>
+              </section>
+          </div>
+        </div>
+</div>
+
+
+<a title="Open article (new tab)" class="button is-small is-success is-light" rel="noopener noreferrer noopener noreferrer" target="_blank" href="https://doi.org/10.21579/issn.2526-0375_2023_n2_23-44">Open Access</a>
+
+
+
+
+
+
+</div>
+
+</div>
+
+<p></p>
+
+<!--  <a class="button is-small is-info" data-toggle="collapse" href="#RibeiroRios2024-abstract">Abstract</a>
+<pre style="white-space:pre-wrap;" id="RibeiroRios2024-abstract" class="pre pre-scrollable collapse">Uma ferramenta bastante utilizada atualmente é a classificação de cobertura do solo, em vários campos da ciência. Com o avanço das técnicas de sensoriamento remoto, pode-se utilizar resoluções melhores de imagens, e com isso a acurácia da classificação melhora. Este trabalho utiliza imagens do satélite World-View 3 para a classificação supervisionada de dois bairros da cidade de Campinas, São Paulo. As classes foram divididas em Árvore, Grama, Asfalto, Sombra, Cimento, Piscina/Água, Solo exposto e Telhados 1, 2 e 3. Foram averiguadas a matriz de erro, o coeficiente Kappa e a acurácia sob três diferentes algoritmos: Mínima Distância, Máxima Verossimilhança e Random Forest. De forma geral, o algoritmo de destaque foi o de Máxima Verossimilhança, tendo acurácias gerais maiores que 90%.</pre>
+
+<a class="button is-small is-info" data-toggle="collapse" href="#RibeiroRios2024-bibtex">BibTeX</a>
+<pre id="RibeiroRios2024-bibtex" class="pre pre-scrollable collapse">@article{RibeiroRios2024,
+  title = {{Avalia\c{c}ão da precisão da classifica\c{c}ão de cobertura do solo na identifica\c{c}ão de áreas potenciais para o aparecimento de criadouros de Aedes aegypt}},
+  volume = {68},
+  issn = {0034-723X},
+  url = {http://dx.doi.org/10.21579/issn.2526-0375_2023_n2_23-44},
+  doi = {10.21579/issn.2526-0375_2023_n2_23-44},
+  number = {2},
+  journal = {Revista Brasileira de Geografia},
+  publisher = {Tikinet Edicao Ltda. - EPP},
+  author = {{Ribeiro Rios}, Israel Henrique and Weyll SantAnna, Maryly and Quintanilha, Jose Alberto and Grohmann, C. H.},
+  year = {2024},
+  month = apr,
+  pages = {23–44},
+  access = {Open Access},
+  oalink = {https://doi.org/10.21579/issn.2526-0375_2023_n2_23-44},
+  owner = {guano},
   kind = {journal}
 }
 </pre> -->
