--- a/students/index.html
+++ b/students/index.html
@@ -166,7 +166,10 @@
 
 <h3 id="supervision">Supervision</h3>
 
-<p>I am currently associated with two Graduate Programs at the University of São Paulo:</p>
+<p>I am currently associated with three Graduate Programs at the University of São Paulo:</p>
+
+<p><strong>Geophysics</strong> (<a href="https://www.iag.usp.br/pos-graduacao/geofisica" target="_blank" rel="noopener noreferrer">PG - Geofísica</a>).<br>
+This program covers all areas of Geophysics. My line of work focus on Geotechnologies (GIS/Remote Sensing).</p>
 
 <p><strong>Mineral Resources and Hydrogeology</strong> (<a href="http://sites.igc.usp.br/posgraduacao/rmh/" target="_blank" rel="noopener noreferrer">RMH - Recursos Minerais e Hidrogeologia</a>).<br>
 This program is characterised by Applied Geosciences studies. My line of work focus on Geotechnologies.</p>
@@ -178,8 +181,8 @@ This program has a strong socio-environmental focus, leaning towards the Humanit
  <br>
  </p>
 
-<h3 id="post-doc">Post-Doc</h3>
-<p><strong>Vivian Cristina Dias</strong>  (2022-??)
+<h3 id="post-docs">Post-Docs</h3>
+<p><strong>Vivian Cristina Dias</strong>  (2022-2024)
 <a href="https://orcid.org/0000-0003-4783-2632" target="_blank" rel="noopener noreferrer">ORCiD</a> | <a href="http://lattes.cnpq.br/3251107283245784" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
 Mapping and classification of watersheds affected by hydro geomorphological processes in the Serra do Mar Paulista: foundation for planning and mitigation actions.<br>
 scholarship: FAPESP grant <a href="https://bv.fapesp.br/55162" target="_blank" rel="noopener noreferrer">#2022/04233-9</a></p>
@@ -204,14 +207,19 @@ period: 2019-? | program: RMH</p>
 <p><strong>Rebeca Durço Coelho</strong><br>
 <a href="http://orcid.org/0000-0003-2131-8862" target="_blank" rel="noopener noreferrer">ORCiD</a> | <a href="http://lattes.cnpq.br/6253625584264789" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
 Study of Morphometry and Geotechnical Properties in Landslides Deflagration<br>
-period: 2021-? | program: RMH
+period: 2021-? | program: RMH</p>
+
+<p><strong>Francis Marney Policarpo de Souza</strong><br>
+<a href="http://lattes.cnpq.br/9250611828386366" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
+Spatial Analysis and Bioeconomics for Management of Conservation Units, Control of Invasive Exotic Grasses and Prevention of Forest Fires<br>
+period: 2024-? | program: PROCAM
  <br>
  </p>
 
 <h3 id="masters-students">Master’s Students</h3>
 <p><strong>Francesco Barale</strong> <br>
 <a href="http://orcid.org/0000-0002-2527-3617" target="_blank" rel="noopener noreferrer">ORCiD</a> | <a href="http://lattes.cnpq.br/0059823974469880" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
-3D modellingo of Pedra do Baú natural monument with RPA-LiDAR <br>
+3D modelling of Pedra do Baú natural monument with RPA-LiDAR <br>
 period: 2023-? | program: RMH</p>
 
 <p> <br>
