updates to publications and students

--- a/grants/index.html
+++ b/grants/index.html
@@ -168,7 +168,8 @@ period: 2024-2026<br>
 funding: FAPESP (<a href="https://bv.fapesp.br/57077" target="_blank" rel="noopener noreferrer">2023/11197-1</a>)<br>
 PI: Carlos H. Grohmann<br>
 Collabs: <a href="https://www.uaic.ro/" target="_blank" rel="noopener noreferrer">Universitatea Alexandru Ioan Cuza din Iași, România</a>, 
-<a href="https://jblindsay.github.io/ghrg/research_group.html" target="_blank" rel="noopener noreferrer">Geomorphometry &amp; Hydrogeomatics Research Group, University of Guelph</a></p>
+<a href="https://jblindsay.github.io/ghrg/research_group.html" target="_blank" rel="noopener noreferrer">Geomorphometry &amp; Hydrogeomatics Research Group, University of Guelph</a><br>
+Media coverage (in Portuguese): <a href="https://namidia.fapesp.br/grupo-da-usp-cria-modelo-que-preve-risco-de-deslizamento-no-litoral/544332" target="_blank" rel="noopener noreferrer">FAPESP na mídia</a></p>
 
 <p><a name="fapesp_anderson"></a><strong>Microplastic’s geochronology in coastal sediment: analysis based on optically stimulated luminescence (LOE), stable isotopes (13C), thermal analysis, and GNSS positioning.</strong><br>
 period: 2022-2024<br>
