--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <p>I’m a Full Professor at the <a href="http://www.iag.usp.br" target="_blank" rel="noopener noreferrer">Institute of Astronomy, Geophysics and Atmospheric Sciences</a> (IAG) of the <a href="https://www.usp.br" target="_blank" rel="noopener noreferrer">Universidade de São Paulo</a> (USP), Brazil, where I run the Spatial Analysis and Modelling Lab (<a href="https://spamlab.github.io/" target="_blank" rel="noopener noreferrer">SPAMLab</a>).</p>
 
-<p>My research interests include Digital Terrain Analysis (Geomorphometry), DEMs, GIS, UAVs, LiDAR, Landslides, Remote Sensing, Free Software (FOSS), Morphotectonics/Neotectonics, and Karstic Systems.</p>
+<p>My research interests include Digital Terrain Analysis (Geomorphometry), DEMs, GIS, UAVs/RPAs, LiDAR, Landslides, Remote Sensing, Free Software (FOSS), Morphotectonics/Neotectonics.</p>
 
 <p> 
  </p>
