--- a/students/index.html
+++ b/students/index.html
@@ -194,6 +194,12 @@ Monitoring of microplastic (pellets) density of a sandy beach by coring, 3D mode
  </p>
 
 <h3 id="phd-students">PhD Students</h3>
+
+<p><strong>Fabiana Pereira Lasmar</strong><br>
+<a href="http://lattes.cnpq.br/4615214525403114" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
+Geotechnologies applied to environmental technical investigations.<br>
+period: 2022-? | program: Geophysics</p>
+
 <p><strong>Helen Cristina Dias</strong><br>
 <a href="http://orcid.org/0000-0002-5006-7006" target="_blank" rel="noopener noreferrer">ORCiD</a> | <a href="http://lattes.cnpq.br/6662222026617086" target="_blank" rel="noopener noreferrer">Lattes CV</a><br>
 Analysis of manual and semi-automatic shallow landslides inventories and its suitability in predictive models<br>
